--- a/index.html
+++ b/index.html
@@ -21,27 +21,28 @@
             background-color: #ffffff;
             color: #333333;
             margin: 0;
-            padding: 20px;
+            padding: 0;
         }
         header, section, footer {
             max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
-            line-height: 1.6;
+            padding: 15px;
+            line-height: 1.5;
         }
         h1, h2 {
             color: #333333;
             font-weight: bold;
+            margin: 0;
         }
         h1 {
-            font-size: 2rem;
+            font-size: 1.8rem;
         }
         h2 {
-            font-size: 1.5rem;
-            margin-top: 30px;
+            font-size: 1.3rem;
+            margin-top: 20px;
         }
         p {
-            margin: 15px 0;
+            margin: 10px 0;
         }
         a {
             color: #1a73e8;
@@ -51,12 +52,20 @@
             text-decoration: underline;
         }
         footer {
-            margin-top: 40px;
+            margin-top: 20px;
             text-align: center;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             color: #666666;
         }
+        .icon {
+            margin-right: 10px;
+            vertical-align: middle;
+        }
     </style>
+
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
 
@@ -66,28 +75,30 @@
 </header>
 
 <section>
-    <h2>Professional Experience</h2>
-    <p>Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
-    <p>Building scalable, cloud-based solutions using TypeScript, Python, PHP, Ruby, and Golang. Hands-on with Node.js, React, GraphQL, Apollo, and Docker.</p>
+    <h2><i class="fas fa-briefcase icon"></i>Professional Experience</h2>
+    <p><i class="fas fa-code icon"></i>Freelance Developer | Outreach.io | Broadcom | Red Hat | Speedflow</p>
+    <p><i class="fas fa-cogs icon"></i>Building scalable, cloud-based solutions using TypeScript, Python, PHP, Ruby, and Golang. Hands-on with Node.js, React, GraphQL, Apollo, and Docker.</p>
 </section>
 
 <section>
-    <h2>Skills & Projects</h2>
-    <p>Optimized microservices architecture | Developed full-stack applications for real-world businesses. Expert in front-end technologies like React & Angular, ensuring intuitive, responsive UI/UX. Developed a World of Warcraft private server—leading both backend development and community management.</p>
+    <h2><i class="fas fa-project-diagram icon"></i>Skills & Projects</h2>
+    <p><i class="fas fa-microchip icon"></i>Optimized microservices architecture | Developed full-stack applications for real-world businesses.</p>
+    <p><i class="fas fa-laptop-code icon"></i>Expert in front-end technologies like React & Angular, ensuring intuitive, responsive UI/UX.</p>
+    <p><i class="fas fa-gamepad icon"></i>Developed a World of Warcraft private server—leading both backend development and community management.</p>
 </section>
 
 <section>
-    <h2>Education & Certifications</h2>
-    <p>Bachelor of Information Technical Protection Systems, National Aviation University, Kyiv, Ukraine (2013)</p>
-    <p>IELTS Certification, August 2018, Score: 8.0</p>
+    <h2><i class="fas fa-graduation-cap icon"></i>Education & Certifications</h2>
+    <p><i class="fas fa-university icon"></i>Bachelor of Information Technical Protection Systems, National Aviation University, Kyiv, Ukraine (2013)</p>
+    <p><i class="fas fa-certificate icon"></i>IELTS Certification, August 2018, Score: 8.0</p>
 </section>
 
 <section>
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:kgliebov@gmail.com">kgliebov@gmail.com</a></p>
-    <p>GitHub (Work): <a href="https://github.com/kirillglebov-outreach">kirillglebov-outreach</a></p>
-    <p>GitHub (Personal): <a href="https://github.com/sabbaka">sabbaka</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/kglebov">linkedin.com/in/kglebov</a></p>
+    <h2><i class="fas fa-envelope icon"></i>Contact</h2>
+    <p><i class="fas fa-envelope icon"></i>Email: <a href="mailto:kgliebov@gmail.com">kgliebov@gmail.com</a></p>
+    <p><i class="fab fa-github icon"></i>GitHub (Work): <a href="https://github.com/kirillglebov-outreach">kirillglebov-outreach</a></p>
+    <p><i class="fab fa-github icon"></i>GitHub (Personal): <a href="https://github.com/sabbaka">sabbaka</a></p>
+    <p><i class="fab fa-linkedin icon"></i>LinkedIn: <a href="https://www.linkedin.com/in/kglebov">linkedin.com/in/kglebov</a></p>
 </section>
 
 <footer>
